# SrFTL

./: LICENSE  README.md
ransom_detection_with_sgx/: .gitignore  CMakeLists.txt  README  app  chisquare_testing.py  detection_running.cpp  disable_cache_buffer.sh  enable_cache_buffer.sh  entropy_plus_chisquare.py  entropy_testing.py
ransom_detection_with_sgx/enclave/: .gitignore  Enclave.cpp  Makefile  get_lba.py  mapping.tbl.bak
ransom_detection_with_sgx/enclave/App/: App.cpp  App.h  util.cpp  util.h
ransom_detection_with_sgx/enclave/Enclave/: Enclave.cpp  Enclave.edl  Enclave.h
ransom_detection_with_sgx/include/: detection.h  types.h
ransom_detection_with_sgx/src/: .detection.cpp.swn  detection.cpp
srftl_qemu/: num_io_queues
srftl_qemu/hw/block/: Makefile.objs
srftl_qemu/hw/block/femu/: femu.c  mem-backend.c  nvme-core.c  nvme.h
srftl_qemu/hw/block/femu/ftl/: ftl.c  ftl.h
